Admin panel rewritting.

--- a/Resources/translations/messages.pl.yml
+++ b/Resources/translations/messages.pl.yml
@@ -1,2 +1,6 @@
 'Users': 'Użytkownicy'
 'Your account': 'Twoje konto'
+'Enabled': 'Włączone'
+'Locked': 'Zablokowane'
+'Last Login': 'Ostatnie logowanie'
+'never': 'nigdy'
